# 2c1u

./: README.md  main.py  pyproject.toml
2c1u/: main.py
2c1u_kicad/: 2c1u.dsn  2c1u.kicad_pcb  2c1u.kicad_prl  2c1u.kicad_pro  2c1u.rules  2c1u.ses  tinkerBOY USB 2.0 Hub.kicad_mod  tinkerBOY USB 2.0 Hub.scad
2c1u_kicad/gerbers/: 2c1u-B_Cu.gbl  2c1u-B_Mask.gbs  2c1u-B_Paste.gbp  2c1u-B_Silkscreen.gbo  2c1u-Edge_Cuts.gm1  2c1u-F_Cu.gtl  2c1u-F_Mask.gts  2c1u-F_Paste.gtp  2c1u-F_Silkscreen.gto  2c1u-job.gbrjob
CircuitPy_Adafruit/: boot.py  code.py
SerialCallResponse/: SerialCallResponse.ino
rfkvm/: rfkvm.dsn  rfkvm.kicad_pcb  rfkvm.kicad_prl  rfkvm.kicad_pro  rfkvm.kicad_sch  rfkvm.rules  rfkvm.ses
rfkvm/gerbers/: rfkvm-B_Cu.gbl  rfkvm-B_Mask.gbs  rfkvm-B_Paste.gbp  rfkvm-B_Silkscreen.gbo  rfkvm-Edge_Cuts.gm1  rfkvm-F_Cu.gtl  rfkvm-F_Mask.gts  rfkvm-F_Paste.gtp  rfkvm-F_Silkscreen.gto  rfkvm-NPTH.drl  rfkvm-PTH.drl  rfkvm-job.gbrjob  rfkvm.drl
