[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "ipython<9.0.0,>=8.0.1",
    "ipdb<1.0.0,>=0.13.9",
    "jupyter<2.0.0,>=1.0.0",
]

[tool.pdm.build]
includes = []
[project]
name = "2c1u"
version = "0.1.0"
description = ""
authors = [
    {name = "Julia Patrin", email = "papercrane@reversefold.com"},
]
dependencies = [
    "PyAutoGUI<1.0.0,>=0.9.53",
    "pyserial<4.0,>=3.5",
    "pyserial-asyncio<1.0,>=0.6",
    "adafruit-board-toolkit<2.0.0,>=1.1.0",
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = {text = "MIT"}


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
